--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "MySQL, PostgreSQL & SQLite3 ORM for Vulcan MVC Framework",
   "main": "./dist/index.js",
+  "files": ["dist/"],
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
